--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,7 +13,7 @@
 }
 
 .avatar {
-  @apply flex items-center gap-8 bg-[var(--bg-primary)] w-[25%] h-full py-4 px-10 shadow-lg text-white font-medium;
+  @apply flex items-center gap-8 bg-[var(--bg-primary)] w-[25%] h-full py-4 px-10 shadow-lg text-white font-medium relative;
   z-index: 1;
 }
 
@@ -80,12 +80,12 @@
   @apply overflow-y-auto lg:overflow-y-scroll h-full;
 
   @media screen and (min-width: 1024px) {
-    height: calc(100vh - 112px - 112px);
+    height: calc(100vh - 112px);
   }
 }
 
 .tab {
-  @apply flex flex-col gap-8 max-w-[1202.66px] px-4 py-3 lg:px-8 lg:py-6;
+  @apply flex flex-col gap-8 max-w-[1202.66px] h-full px-4 py-3 lg:px-8 lg:py-6;
 }
 
 .tab__content {
